test/e2e/emitters/agentgateway/testdata/output/basic.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: agw.demo.localdev.me
    name: agw-demo-localdev-me-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: agw-demo-localhost-agw-demo-localdev-me
spec:
  hostnames:
  - agw.demo.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
status:
  parents: []
