test/e2e/emitters/agentgateway/testdata/output/external_auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: external-auth.localdev.me
    name: external-auth-localdev-me-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: external-auth-localhost-external-auth-localdev-me
  namespace: default
spec:
  hostnames:
  - external-auth.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: external-auth-localhost
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: external-auth-localhost-external-auth-localdev-me
  traffic:
    extAuth:
      backendRef:
        name: auth-service
        namespace: default
        port: 8080
      http:
        allowedResponseHeaders:
        - X-Auth-Token
        - X-User-ID
status:
  ancestors: null
