test/e2e/emitters/agentgateway/testdata/output/frontend_tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: frontend-tls.example.org
    name: frontend-tls-example-org-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-frontend-tls-frontend-tls-example-org
  namespace: default
spec:
  hostnames:
  - frontend-tls.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: nginx-frontend-tls
  namespace: default
spec:
  frontend:
    tls:
      alpnProtocols:
      - h2
      - http/1.1
      handshakeTimeout: 20s
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx
status:
  ancestors: null
