test/e2e/emitters/agentgateway/testdata/output/rate_limit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: agtw.ratelimit-burst.example.org
    name: agtw-ratelimit-burst-example-org-http
    port: 80
    protocol: HTTP
  - hostname: agtw.ratelimit.example.org
    name: agtw-ratelimit-example-org-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: agtw-ingress-ratelimit-burst-agtw-ratelimit-burst-example-org
  namespace: default
spec:
  hostnames:
  - agtw.ratelimit-burst.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: agtw-ingress-ratelimit-rpm-agtw-ratelimit-example-org
  namespace: default
spec:
  hostnames:
  - agtw.ratelimit.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /rpm
    name: rule-1
status:
  parents: []
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agtw-ingress-ratelimit-burst
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: agtw-ingress-ratelimit-burst-agtw-ratelimit-burst-example-org
  traffic:
    rateLimit:
      local:
      - burst: 250
        requests: 50
        unit: Seconds
status:
  ancestors: null
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agtw-ingress-ratelimit-rpm
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: agtw-ingress-ratelimit-rpm-agtw-ratelimit-example-org
  traffic:
    rateLimit:
      local:
      - requests: 600
        unit: Minutes
status:
  ancestors: null
