test/e2e/emitters/agentgateway/testdata/output/rewrite_target.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: rewrite.localdev.me
    name: rewrite-localdev-me-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: rewrite-localhost-rewrite-localdev-me
  namespace: default
spec:
  hostnames:
  - rewrite.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /after/rewrite
          type: ReplaceFullPath
    matches:
    - path:
        type: PathPrefix
        value: /before/rewrite
    name: rule-0
status:
  parents: []
