test/e2e/emitters/agentgateway/testdata/output/timeouts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: timeout-proxy-read.example.org
    name: timeout-proxy-read-example-org-http
    port: 80
    protocol: HTTP
  - hostname: timeout-proxy-send.example.org
    name: timeout-proxy-send-example-org-http
    port: 80
    protocol: HTTP
  - hostname: timeout-send-and-read.example.org
    name: timeout-send-and-read-example-org-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-timeout-proxy-read-timeout-proxy-read-example-org
  namespace: default
spec:
  hostnames:
  - timeout-proxy-read.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /read
    name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-timeout-proxy-send-timeout-proxy-send-example-org
  namespace: default
spec:
  hostnames:
  - timeout-proxy-send.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-timeout-send-and-read-timeout-send-and-read-example-org
  namespace: default
spec:
  hostnames:
  - timeout-send-and-read.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
status:
  parents: []
